--- a/ProxysqlAdminUi.Web/Components/Pages/MySql/Rules/EditQueryRuleDialog.razor
+++ b/ProxysqlAdminUi.Web/Components/Pages/MySql/Rules/EditQueryRuleDialog.razor
@@ -2,6 +2,7 @@
 
 @using ProxysqlAdminUi.Web.Models
 @using ProxysqlAdminUi.Web.Repositories
+@using ProxysqlAdminUi.Web.Components.Common
 
 @attribute [Authorize]
 
@@ -54,7 +55,7 @@
                             <RadzenColumn Size="6">
                                 <RadzenStack>
                                     <RadzenLabel Text="Cache TTL" />
-                                    <RadzenNumeric @bind-Value=@_queryRule.CacheTtl Name="@nameof(MysqlQueryRuleModel.CacheTtl)" Min="1" />
+                                    <TimeInput @bind-Value="_queryRule.CacheTtl" />
                                 </RadzenStack>
                             </RadzenColumn>
                             <RadzenColumn Size="6">
