Adjusted namespaces and formatting

--- a/ProxysqlAdminUi.Web/Components/CustomComponents/TimeInput.razor
+++ b/ProxysqlAdminUi.Web/Components/CustomComponents/TimeInput.razor
@@ -1,4 +1,4 @@
-﻿@namespace ProxysqlAdminUi.Web.Components.Common
+﻿@namespace ProxysqlAdminUi.Web.Components.CustomComponents
 
 <RadzenRow>
     <RadzenColumn Size="3">
