--- a/ProxysqlAdminUi.Web/Components/Pages/MySql/Rules/AddQueryRuleDialog.razor
+++ b/ProxysqlAdminUi.Web/Components/Pages/MySql/Rules/AddQueryRuleDialog.razor
@@ -2,7 +2,7 @@
 
 @using ProxysqlAdminUi.Web.Models
 @using ProxysqlAdminUi.Web.Repositories
-@using ProxysqlAdminUi.Web.Components.Common
+@using ProxysqlAdminUi.Web.Components.CustomComponents
 
 @attribute [Authorize]
 
