Fix formatting in query digest

--- a/ProxysqlAdminUi.Web/Components/Pages/MySql/Queries/QueryDigestPage.razor
+++ b/ProxysqlAdminUi.Web/Components/Pages/MySql/Queries/QueryDigestPage.razor
@@ -73,11 +73,11 @@
             </RadzenDataGridColumn>
 
             <RadzenDataGridColumn TItem="QueryDigestViewModel" Property="@nameof(QueryDigestViewModel.CountStar)"
-                                  HeaderTooltip="Total number of times this query pattern was executed" Title="Query Count" FormatString="{0:### ### ### ### ###}" Filterable="true"
+                                  HeaderTooltip="Total number of times this query pattern was executed" Title="Query Count" FormatString="{0:### ### ### ### ##0}" Filterable="true"
                                   Sortable="true" />
             
             <RadzenDataGridColumn TItem="QueryDigestViewModel" Property="@nameof(QueryDigestViewModel.CacheHits)"
-                                  HeaderTooltip="Total number of times this query pattern was executed" Title="Cache Hits" FormatString="{0:### ### ### ### ###}"  Filterable="true"
+                                  HeaderTooltip="Total number of times this query pattern was executed" Title="Cache Hits" FormatString="{0:### ### ### ### ##0}"  Filterable="true"
                                   Sortable="true" />
             
             <RadzenDataGridColumn TItem="QueryDigestViewModel" Property="@nameof(QueryDigestViewModel.FirstSeen)"
@@ -105,19 +105,19 @@
             </RadzenDataGridColumn>
 
             <RadzenDataGridColumn TItem="QueryDigestViewModel" Property="@nameof(QueryDigestViewModel.MinTime)"
-                                  HeaderTooltip="Minimum query execution time in microseconds" Title="Min Time (μs)" Filterable="true"
+                                  HeaderTooltip="Minimum query execution time in microseconds" Title="Min Time (μs)" FormatString="{0:### ### ### ### ##0}" Filterable="true"
                                   Sortable="true" />
 
             <RadzenDataGridColumn TItem="QueryDigestViewModel" Property="@nameof(QueryDigestViewModel.MaxTime)"
-                                  HeaderTooltip="Maximum query execution time in microseconds" Title="Max Time (μs)" Filterable="true"
+                                  HeaderTooltip="Maximum query execution time in microseconds" Title="Max Time (μs)" FormatString="{0:### ### ### ### ##0}" Filterable="true"
                                   Sortable="true" />
 
             <RadzenDataGridColumn TItem="QueryDigestViewModel" Property="@nameof(QueryDigestViewModel.SumRowsAffected)"
-                                  HeaderTooltip="Total number of rows affected by this query pattern" Title="Rows Affected"  FormatString="{0:### ### ### ### ###}" Filterable="true"
+                                  HeaderTooltip="Total number of rows affected by this query pattern" Title="Rows Affected"  FormatString="{0:### ### ### ### ##0}" Filterable="true"
                                   Sortable="true" />
 
             <RadzenDataGridColumn TItem="QueryDigestViewModel" Property="@nameof(QueryDigestViewModel.SumRowsSent)"
-                                  HeaderTooltip="Total number of rows returned by this query pattern" Title="Rows Sent"  FormatString="{0:### ### ### ### ###}" Filterable="true"
+                                  HeaderTooltip="Total number of rows returned by this query pattern" Title="Rows Sent"  FormatString="{0:### ### ### ### ##0}" Filterable="true"
                                   Sortable="true" />
 
 
